[tool.poetry]
name = "captionvoicebotproj"
version = "0.1.0"
description = ""
authors = ["Matthew <matthewgiovannini@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"


[tool.poetry.group.tg.dependencies]
aiogram = "^3.21.0"
pillow = "^11.3.0"
httpx = "^0.28.1"
faststream = {extras = ["redis"], version = "^0.5.48"}


[tool.poetry.group.web.dependencies]
faststream = {extras = ["redis"], version = "^0.5.48"}
pillow = "^11.3.0"
aioredis = "^2.0.1"
tritonclient = {extras = ["http"], version = "^2.59.0"}
httpx = "^0.28.1"
albumentations = "^2.0.8"
torch = "^2.7.1"
numpy = "^2.3.2"
tokenizers = "^0.21.4"


[tool.poetry.group.fileservice.dependencies]
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
